# hermes-voice-telemetry

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SBOM.json  pyproject.toml
.github/workflows/: ci.yml
skills/voice-telemetry/: SKILL.md
src/hermes_voice_telemetry/: __init__.py  config.py  plugin.py
src/voice_telemetry/: __init__.py  app.py  config.py  plugin.py  pyproject.toml
src/voice_telemetry/breaker/: circuit_breaker.py
src/voice_telemetry/logger/: structured_logger.py
src/voice_telemetry/metrics/: metrics_collector.py
systemd/user/: voice-telemetry.service
tests/: conftest.py  test_smoke.py
