[build-system]
requires = ["setuptools>=77.0,<83"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-voice-telemetry"
version = "1.0.0"
description = "Voice-telemetry service (FastAPI + circuit breaker + metrics) para hermes-agent"
readme = "README.md"
requires-python = ">=3.11,<3.14"
authors = [{ name = "Will Zapprosite" }]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "hermes-agent>=0.16.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.5",
  "pydantic-settings>=2.0",
  "httpx>=0.27",
  "structlog>=24.1",
  "redis>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0", "mypy>=1.10", "ruff>=0.6"]

[project.entry-points."hermes_agent.plugins"]
voice_telemetry = "voice_telemetry.plugin:VoiceTelemetryPlugin"

[tool.setuptools.packages.find]
where = ["src"]
