[project]
name = "voice-telemetry"
version = "0.1.0"
description = "Hermes Voice Telemetry and Circuit Breaker Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "redis>=5.0.0",
    "prometheus-client>=0.20.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
